--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "- Fecha y hora de entrega: Jueves 4 de enero, 11:59pm\n",
-    "- Agregue los nombres de las personas con las que discutió esta tarea: ____ Mateo Podestá ______\n",
+    "- Agregue los nombres de las personas con las que discutió esta tarea: ____ Mateo Podesta ______\n",
     "- Envíe su tarea haciendo el `push` de su código a su repo en GitHub Classroom: "
    ]
   },
