--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Respuesta: ______________________________*"
+    "*Respuesta: AMBOS QUEREMOS CAMBIAR LA MISMA LINEA DE CODIGO*"
    ]
   },
   {
