--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -98,11 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate the product of monthly_savings and num_months\n"
+    "# Calculate the product of monthly_savings and num_months\n",
+    "year_savings = monthly_savings*num_months\n",
+    "print(year_savings)\n"
    ]
   },
   {
@@ -114,11 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What do you think the resulting type will be? Find out by printing out the type of year_savings.\n"
+    "# What do you think the resulting type will be? Find out by printing out the type of year_savings.\n",
+    "type(year_savings)\n"
    ]
   },
   {
@@ -130,11 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the sum of intro and intro and store the result in a new variable doubleintro.\n"
+    "# Calculate the sum of intro and intro and store the result in a new variable doubleintro.\n",
+    "doubleintro=intro+intro"
    ]
   },
   {
@@ -146,11 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How are you?Hello! How are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print out doubleintro. Did you expect this?\n"
+    "# Print out doubleintro. Did you expect this?\n",
+    "print(doubleintro)"
    ]
   },
   {
@@ -169,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,9 +537,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 1, 8, 5, 2, 3, 1, 9, 2, 2, 0, 5, 7, 5, 6, 5, 7, 1, 4, 6, 5, 5,\n",
+       "       8, 9, 4, 3, 1, 0, 6, 6, 5, 8, 0, 1, 7, 4, 8, 5, 9, 3, 0, 8, 4, 5,\n",
+       "       8, 7, 0, 9, 0, 5, 3, 5, 8, 6, 2, 9, 9, 5, 2, 7, 5, 3, 5, 3, 9, 9,\n",
+       "       3, 8, 9, 7, 9, 3, 0, 9, 8, 8, 1, 9, 7, 7, 3, 5, 5, 8, 2, 4, 5, 9,\n",
+       "       0, 0, 3, 4, 9, 1, 7, 5, 5, 3, 1, 5, 0, 9, 7, 6, 9, 2, 3, 8, 7, 4,\n",
+       "       6, 0, 6, 8, 2, 9, 3, 7, 1, 4, 7, 1, 8, 1, 2, 3, 7, 4, 5, 0, 0, 3,\n",
+       "       2, 1, 3, 0, 1, 0, 4, 6, 7, 9, 0, 4, 0, 5, 8, 7, 6, 4, 1, 6, 8, 0,\n",
+       "       7, 3, 8, 9, 3, 7, 8, 1, 0, 1, 3, 9, 2, 9, 2, 2, 5, 6, 8, 3, 0, 4,\n",
+       "       1, 5, 3, 4, 8, 0, 9, 2, 3, 4, 3, 1, 9, 2, 6, 7, 3, 9, 0, 4, 3, 1,\n",
+       "       2, 6, 1, 5, 7, 6, 1, 9, 3, 5, 9, 3, 5, 2, 2, 9, 9, 3, 9, 7, 6, 8,\n",
+       "       8, 1, 5, 0, 5, 7, 8, 5, 5, 9, 1, 7, 6, 6, 1, 9, 7, 7, 4, 3, 8, 7,\n",
+       "       8, 9, 4, 5, 2, 9, 5, 5, 1, 1, 4, 0, 4, 7, 2, 4, 6, 8, 6, 5, 9, 3,\n",
+       "       6, 1, 0, 5, 4, 2, 2, 1, 8, 2, 6, 9, 2, 3, 3, 5, 3, 6, 9, 3, 5, 3,\n",
+       "       4, 0, 4, 6, 2, 5, 6, 4, 8, 5, 8, 7, 9, 2, 9, 9, 6, 9, 7, 9, 5, 7,\n",
+       "       2, 4, 4, 1, 8, 2, 8, 9, 1, 0, 8, 5, 6, 4, 5, 3, 8, 0, 0, 2, 2, 9,\n",
+       "       0, 0, 8, 5, 2, 7, 2, 0, 9, 7, 7, 1, 6, 0, 0, 2, 8, 5, 0, 0, 4, 9,\n",
+       "       4, 0, 6, 8, 1, 9, 4, 9, 4, 5, 9, 6, 9, 6, 7, 4, 7, 5, 5, 5, 9, 7,\n",
+       "       8, 3, 2, 6, 2, 9, 1, 2, 1, 3, 8, 3, 8, 5, 6, 0, 0, 7, 6, 9, 4, 2,\n",
+       "       2, 5, 5, 0, 6, 1, 0, 2, 3, 7, 6, 8, 4, 3, 4, 8, 0, 3, 7, 1, 9, 0,\n",
+       "       0, 3, 8, 5, 0, 6, 5, 6, 1, 7, 3, 3, 2, 3, 3, 9, 6, 0, 6, 5, 1, 0,\n",
+       "       2, 3, 2, 2, 1, 4, 5, 2, 7, 3, 4, 5, 5, 1, 6, 5, 2, 3, 6, 0, 7, 3,\n",
+       "       2, 2, 9, 1, 3, 7, 3, 7, 3, 4, 9, 9, 0, 1, 9, 0, 7, 0, 3, 7, 4, 8,\n",
+       "       7, 6, 6, 9, 9, 7, 2, 3, 4, 0, 5, 8, 2, 9, 8, 0])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prueba1 = np.random.randint(0,10,500)\n",
     "prueba1\n"
@@ -515,9 +580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15,  8, 31, 25, 11,  7, 28, 41,  1, 22, 33,  2, 30,  0,  5, 23,  6,\n",
+       "       45, 26,  4, 35, 48, 40, 39, 37, 13, 21, 44, 46, 10, 27, 42, 12, 34,\n",
+       "       16, 29, 24, 19, 14, 32,  9, 17,  3, 18, 38, 43, 49, 20, 36, 47])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prueba2 = np.arange(50)\n",
     "np.random.shuffle(prueba2)\n",
@@ -533,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
