--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -482,11 +482,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am too old\n"
+     ]
+    }
+   ],
    "source": [
-    "# Drop duplicated blank spaces\n"
+    "# Drop duplicated blank spaces\n",
+    "# Step 1: Split the string into a list of words\n",
+    "lista_palabras = str1.split(' ')\n",
+    "\n",
+    "# Step 2: Filter out empty strings\n",
+    "filtered_words = [word for word in lista_palabras if word]\n",
+    "\n",
+    "# Step 3: Join the filtered words using a single space\n",
+    "str_nuevo = ' '.join(filtered_words)\n",
+    "\n",
+    "print(str_nuevo)"
    ]
   },
   {
@@ -498,11 +516,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Number of letters"
+    "# Number of letters\n",
+    "len(str_nuevo)"
    ]
   },
   {
@@ -514,11 +544,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Number of blanck spaces\n"
+    "# Number of blanck spaces\n",
+    "str_nuevo.count(' ')"
    ]
   },
   {
@@ -611,11 +653,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Most frequent value\n"
+    "moda = np.argmax(np.bincount(prueba1))\n",
+    "print(moda)"
    ]
   },
   {
@@ -627,11 +678,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15,  8, 31, 25, 11,  7, 28, 41,  1, 22],\n",
+       "       [33,  2, 30,  0,  5, 23,  6, 45, 26,  4],\n",
+       "       [35, 48, 40, 39, 37, 13, 21, 44, 46, 10],\n",
+       "       [27, 42, 12, 34, 16, 29, 24, 19, 14, 32],\n",
+       "       [ 9, 17,  3, 18, 38, 43, 49, 20, 36, 47]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Reshape\n"
+    "# Reshape\n",
+    "prueba2.reshape(5,-1)"
    ]
   }
  ],
