--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -223,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show indices for np.nan values\n"
+    "# Show indices for np.nan values"
    ]
   },
   {
@@ -394,11 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('pink grapefruit', [10, 20, 30], (5, 15, 25))"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change value\n"
+    "# Change value"
    ]
   },
   {
@@ -426,9 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sum all elemenets of tuple2\n"
    ]
