--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "- Fecha y hora de entrega: Jueves 4 de enero, 11:59pm\n",
-    "- Agregue los nombres de las personas con las que discutió esta tarea: ____ Marco Gregorio ______\n",
+    "- Agregue los nombres de las personas con las que discutió esta tarea: ____ Mateo Podesta ______\n",
     "- Envíe su tarea haciendo el `push` de su código a su repo en GitHub Classroom: "
    ]
   },
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Respuesta: ______________________________*"
+    "*Respuesta: AMBOS QUEREMOS CAMBIAR LA MISMA LINEA DE CODIGO*"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate the product of monthly_savings and num_months\n"
+    "# Calculate the product of monthly_savings and num_months\n",
+    "year_savings = monthly_savings*num_months\n",
+    "print(year_savings)\n"
    ]
   },
   {
@@ -114,11 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What do you think the resulting type will be? Find out by printing out the type of year_savings.\n"
+    "# What do you think the resulting type will be? Find out by printing out the type of year_savings.\n",
+    "type(year_savings)"
    ]
   },
   {
@@ -130,11 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the sum of intro and intro and store the result in a new variable doubleintro.\n"
+    "# Calculate the sum of intro and intro and store the result in a new variable doubleintro.\n",
+    "doubleintro=intro+intro"
    ]
   },
   {
@@ -146,11 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How are you?Hello! How are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print out doubleintro. Did you expect this?\n"
+    "# Print out doubleintro. Did you expect this?\n",
+    "print(doubleintro)"
    ]
   },
   {
@@ -169,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,11 +223,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The indices 1, 2, 5, 8 have np.nan values.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show indices for np.nan values\n"
+    "# Show indices for np.nan values\n",
+    "f_list = [\"Brazil\", np.nan , np.nan, \"Austria\", \"Germany\", np.nan, \"Pakistan\", \"np.nan\", np.nan ]\n",
+    "nan_indices = [index for index, value in enumerate(f_list) if isinstance(value, float) and np.isnan(value)]\n",
+    "print(f\"The indices {', '.join(map(str, nan_indices))} have np.nan values.\")"
    ]
   },
   {
@@ -207,11 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 2, 3, 4, 5, 2, 3, 4, 5, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Replicates p1_list\n"
+    "# Replicates p1_list\n",
+    "p1_list = [2, 3, 4, 5]\n",
+    "replicated_list = p1_list * 4\n",
+    "print(replicated_list)\n"
    ]
   },
   {
@@ -223,11 +277,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Lenngth of f_list\n"
+    "# Lenngth of f_list\n",
+    "f_list = [\"Brazil\", np.nan, np.nan, \"Austria\", \"Germany\", np.nan, \"Pakistan\", \"np.nan\", np.nan]\n",
+    "print(len(f_list))"
    ]
   },
   {
@@ -239,11 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My new teacher assistant is so boring.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Printing\n"
+    "# Printing\n",
+    "text1 = ['My', 'new', 'teacher', 'assistant', 'is', 'so', 'boring.']\n",
+    "sentence = ' '.join(text1)\n",
+    "print(sentence)"
    ]
   },
   {
@@ -258,11 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The max value of values1 is 91 and is located in the 10 index.\n",
+      "The min value of values1 is 0 and is located in the 7 index.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Printing\n"
+    "# Printing\n",
+    "print(f'The max value of values1 is {max(values1)} and is located in the {values1.index(max(values1))} index.')\n",
+    "print(f'The min value of values1 is {min(values1)} and is located in the {values1.index(min(values1))} index.')"
    ]
   },
   {
@@ -274,11 +360,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given Names: ('CORNEJO SANCHEZ', 'ORELLANA QUISPE')\n",
+      "Last Names: ('CHRISTIAN SANTOS', 'CRISTIAN NASSER')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Two lists\n"
+    "# Two lists\n",
+    "last_and_name = [ \"CORNEJO SANCHEZ, CHRISTIAN SANTOS\", \"ORELLANA QUISPE, CRISTIAN NASSER\",]\n",
+    "\n",
+    "given_names, last_names = zip(*(name.split(', ') for name in last_and_name))\n",
+    "\n",
+    "print(\"Given Names:\", given_names)\n",
+    "print(\"Last Names:\", last_names)"
    ]
   },
   {
@@ -290,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,11 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print\n"
+    "# Print\n",
+    "print(tuple1[1][0])"
    ]
   },
   {
@@ -346,11 +456,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 15, 25)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print\n"
+    "# Print\n",
+    "print(tuple1[-1])"
    ]
   },
   {
@@ -362,11 +481,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('pink grapefruit', [10, 20, 30], (5, 15, 25))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change value\n"
+    "# Change value\n",
+    "lst = list(tuple1)\n",
+    "lst[0] = 'pink grapefruit'\n",
+    "tuple1_new = tuple(lst)\n",
+    "tuple1_new"
    ]
   },
   {
@@ -378,11 +512,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print\n"
+    "# Print\n",
+    "print(len(tuple1))"
    ]
   },
   {
@@ -394,11 +537,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Sum all elemenets of tuple2\n"
+    "# Sum all elemenets of tuple2\n",
+    "sum(list(map(sum, list(tuple2))))"
    ]
   },
   {
@@ -410,11 +565,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([3.5, 4.0], [4.5, 0.5], [5.0, 3.5])\n"
+     ]
+    }
+   ],
    "source": [
-    "# New tuple"
+    "# New tuple\n",
+    "tuple3 = tuple(map(lambda inner_list: [value / 2 for value in inner_list], tuple2))\n",
+    "print(tuple3)"
    ]
   },
   {
@@ -433,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,11 +615,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am too old\n"
+     ]
+    }
+   ],
    "source": [
-    "# Drop duplicated blank spaces\n"
+    "# Drop duplicated blank spaces\n",
+    "# Step 1: Split the string into a list of words\n",
+    "lista_palabras = str1.split(' ')\n",
+    "\n",
+    "# Step 2: Filter out empty strings\n",
+    "filtered_words = [word for word in lista_palabras if word]\n",
+    "\n",
+    "# Step 3: Join the filtered words using a single space\n",
+    "str_nuevo = ' '.join(filtered_words)\n",
+    "\n",
+    "print(str_nuevo)"
    ]
   },
   {
@@ -466,11 +649,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Number of letters"
+    "# Number of letters\n",
+    "len(str_nuevo)"
    ]
   },
   {
@@ -482,11 +677,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Number of blanck spaces\n"
+    "# Number of blanck spaces\n",
+    "str_nuevo.count(' ')"
    ]
   },
   {
@@ -505,9 +712,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 3, 6, 4, 6, 4, 6, 5, 7, 9, 7, 9, 6, 3, 7, 5, 6, 4, 3, 9, 2,\n",
+       "       3, 8, 3, 2, 0, 1, 7, 7, 1, 9, 9, 9, 9, 8, 6, 8, 0, 7, 4, 9, 7, 0,\n",
+       "       6, 3, 4, 7, 0, 1, 7, 0, 4, 6, 2, 7, 4, 2, 2, 6, 7, 0, 0, 2, 5, 9,\n",
+       "       0, 7, 3, 2, 4, 5, 7, 4, 1, 0, 8, 5, 3, 7, 1, 9, 5, 0, 2, 4, 6, 7,\n",
+       "       4, 5, 6, 8, 5, 6, 2, 2, 1, 7, 5, 5, 5, 4, 9, 2, 9, 3, 4, 6, 6, 7,\n",
+       "       2, 8, 0, 4, 9, 3, 7, 0, 9, 3, 6, 5, 2, 3, 8, 5, 1, 6, 2, 7, 5, 9,\n",
+       "       4, 3, 5, 6, 6, 7, 8, 1, 0, 1, 4, 0, 3, 7, 5, 6, 2, 1, 0, 2, 6, 0,\n",
+       "       7, 4, 6, 3, 4, 7, 4, 6, 8, 4, 9, 7, 0, 4, 6, 5, 3, 6, 2, 7, 6, 6,\n",
+       "       2, 3, 7, 0, 4, 8, 5, 1, 1, 9, 9, 6, 7, 3, 8, 2, 6, 9, 5, 8, 2, 3,\n",
+       "       9, 7, 7, 3, 0, 7, 8, 2, 9, 4, 6, 9, 6, 1, 1, 9, 9, 6, 4, 0, 7, 1,\n",
+       "       7, 9, 1, 1, 2, 4, 9, 8, 2, 1, 7, 5, 5, 8, 3, 4, 7, 2, 0, 0, 8, 8,\n",
+       "       7, 9, 4, 3, 8, 1, 4, 1, 4, 3, 6, 9, 3, 2, 9, 5, 6, 2, 1, 6, 2, 1,\n",
+       "       8, 9, 4, 4, 0, 9, 2, 9, 2, 4, 8, 4, 0, 4, 0, 5, 7, 0, 8, 0, 6, 3,\n",
+       "       1, 2, 9, 3, 9, 3, 5, 7, 1, 7, 6, 9, 2, 7, 5, 6, 2, 0, 3, 1, 4, 3,\n",
+       "       7, 5, 3, 5, 4, 4, 4, 7, 9, 0, 0, 3, 3, 0, 4, 8, 4, 7, 9, 5, 8, 9,\n",
+       "       6, 6, 9, 4, 1, 8, 9, 4, 4, 9, 4, 3, 1, 4, 5, 8, 5, 0, 6, 9, 3, 1,\n",
+       "       2, 2, 9, 5, 5, 3, 6, 3, 1, 0, 6, 9, 4, 7, 0, 2, 4, 3, 6, 7, 6, 7,\n",
+       "       7, 7, 6, 5, 7, 4, 8, 1, 8, 4, 7, 7, 5, 8, 9, 7, 6, 2, 8, 0, 8, 6,\n",
+       "       3, 4, 8, 5, 5, 7, 0, 7, 4, 1, 5, 9, 4, 7, 6, 4, 1, 7, 0, 2, 2, 4,\n",
+       "       1, 7, 7, 1, 1, 8, 2, 4, 9, 1, 2, 1, 4, 7, 1, 5, 5, 0, 2, 0, 4, 7,\n",
+       "       3, 4, 5, 5, 5, 8, 5, 4, 2, 8, 2, 6, 0, 8, 1, 3, 1, 0, 3, 4, 1, 4,\n",
+       "       1, 8, 2, 4, 2, 8, 7, 9, 1, 8, 7, 0, 7, 6, 6, 9, 9, 5, 4, 3, 6, 5,\n",
+       "       4, 6, 3, 4, 8, 8, 6, 3, 5, 9, 7, 9, 9, 7, 4, 0])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prueba1 = np.random.randint(0,10,500)\n",
     "prueba1\n"
@@ -515,9 +755,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 45,  2, 44,  8, 25, 41, 21, 48,  4, 24, 23, 34,  9,  1, 49, 40,\n",
+       "       47, 39, 28, 27,  3, 12, 42, 17,  0,  6, 46, 13, 35, 30, 43, 29, 18,\n",
+       "       31, 20,  5, 26, 16,  7, 19, 33, 14, 11, 36, 15, 32, 37, 22, 38])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prueba2 = np.arange(50)\n",
     "np.random.shuffle(prueba2)\n",
@@ -533,11 +786,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Most frequent value\n"
+    "moda = np.argmax(np.bincount(prueba1))\n",
+    "print(moda)"
    ]
   },
   {
@@ -549,11 +811,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 45,  2, 44,  8, 25, 41, 21, 48,  4],\n",
+       "       [24, 23, 34,  9,  1, 49, 40, 47, 39, 28],\n",
+       "       [27,  3, 12, 42, 17,  0,  6, 46, 13, 35],\n",
+       "       [30, 43, 29, 18, 31, 20,  5, 26, 16,  7],\n",
+       "       [19, 33, 14, 11, 36, 15, 32, 37, 22, 38]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Reshape\n"
+    "# Reshape\n",
+    "prueba2.reshape(5,-1)"
    ]
   }
  ],
