--- a/tarea_1.ipynb
+++ b/tarea_1.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nota: 18\n",
+    "Adicional: 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Curso:          Fundamentos de Programación en Python para Macroeconomía y Finanzas     \n",
     "Profesor:       Victor Fuentes Campos     "
    ]
@@ -383,6 +391,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grading: -1\n",
+    "# This is not the same object"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -501,6 +519,17 @@
     "lst[0] = 'pink grapefruit'\n",
     "tuple1_new = tuple(lst)\n",
     "tuple1_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grading: -1\n",
+    "# Change value\n",
+    "# tuple1[0] = 'pink grapefruit' # We can't change values in tuples once created"
    ]
   },
   {
@@ -852,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
